# auto_parliament

./: .cursorrules  .gitignore  README.md  pyproject.toml  pyproject.toml.bak
auto_parliament/: custom_inspect_elements.py  datasets.py  ethics_eval.py  eval_datasets.py  log_utils.py  parliament.py  plotting.py  prompts.py  run_evals.py  single_llms.py
auto_parliament/data/eval_logs/commonsense_20240921_183423.jsonl/: 2024-09-21T18-34-26+01-00_task_TkmWRA8WZn4Dt94mtToDDf.json
auto_parliament/data/eval_logs/commonsense_20240921_183631.jsonl/: 2024-09-21T18-36-32+01-00_task_at7xzuhcX5pTvJKyQJE79n.json
data/chat_logs/: 2024-09-15-1701.json
data/eval_aug_dfs/2024-09-29T1332/: commonsense.pkl  deontology.pkl  justice.pkl  utilitarianism.pkl
data/eval_dfs/2024-09-28T1843/: commonsense.pkl  deontology.pkl  justice.pkl  utilitarianism.pkl
data/eval_dfs/2024-09-29T1326/: commonsense.pkl  deontology.pkl  justice.pkl  utilitarianism.pkl
data/eval_logs/commonsense/: 2024-09-22T11-50-26+01-00_task_RjJwaxM5khwPug758NxqAS.json  2024-09-22T12-01-43+01-00_task_TyYpSoPNGU5LXCXz42LN4d.json  2024-09-22T12-21-39+01-00_task_VuzTUenzRdm2kH8jbKGLan.json  2024-09-22T12-23-49+01-00_task_GVReWmAPaFrdsjC7W4iFAM.json
data/eval_logs/commonsense_20240921_182545.jsonl/: 2024-09-21T18-25-46+01-00_task_bkj64xK5eJ2VwuRx7TskMB.json
data/eval_logs/commonsense_20240922_104743.jsonl/: 2024-09-22T10-47-44+01-00_task_VSgKadK3sAEgWYAaRca3hk.json
ethics_eval/: eval_datasets.py  log_utils.py  plotting.py  run_evals.py  single_llms.py
tests/: test_api.py  test_custom_inspect_elements.py
(+127 files in other folders)
